test/mlir/slice_bad_case_1.mlir.stderr
test/mlir/slice_bad_case_1.mlir:5:8: error: 'colgm.slice' op output dim 0 = 4 != input dim 0 = 3
  %0 = colgm.slice %arg, %idx {axis = 1} : tensor<3x4xf32>, index -> tensor<4xf32>
       ^
test/mlir/slice_bad_case_1.mlir:5:8: note: see current operation: %0 = "colgm.slice"(%arg0, %arg1) {axis = 1 : i64} : (tensor<3x4xf32>, index) -> tensor<4xf32>
